--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -219,11 +219,11 @@
       {% endif %}
 
       <br>
-      {% if site.clustrmaps_id %}
+      <!-- {% if site.clustrmaps_id %}
       <div style="width:100px; pointer-events: none;">
       <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=043361&w=153&t=n&d={{ site.clustrmaps_id }}&co=ffffff&cmo=3eb7f0&ct=043361'></script>
       </div>
-      {% endif %}
+      {% endif %} -->
       
       </section>
       <footer>
