🐞 fix: adjust position

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,6 +1,6 @@
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #13294B;
+    background-color: #94070A;
     overflow: hidden;
 	  position:fixed;
 	  z-index:999;
@@ -19,7 +19,9 @@
   .topnav img {
     margin-bottom:0pt;
     margin-top:10pt;
-    margin-left:30%;
+    /* margin-left:30%; */
+    margin-left:70%;
+
   }
   
   /* Style the links inside the navigation bar */
