--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,6 +1,6 @@
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #94070A;
+  background-color: #13294B;
     overflow: hidden;
 	  position:fixed;
 	  z-index:999;
