--- a/assets/css/nav-ori.css
+++ b/assets/css/nav-ori.css
@@ -9,6 +9,8 @@
   }
 
   .topnav img {
+    /* margin-bottom:-17.5pt;
+     */
     margin-bottom:-17.5pt;
     margin-top:-16.5pt;
     /* margin-left:30%; */
